[gd_scene load_steps=2 format=2]

[ext_resource path="res://bosses/hit_box/hit_box.gd" type="Script" id=1]

[node name="HitBox" type="Area"]
collision_layer = 4
script = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_HitBox_body_exited"]
